--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,6 @@
 {
   "dependencies": {
     "com.annulusgames.entities-events": "https://github.com/AnnulusGames/EntitiesEvents.git?path=Assets/EntitiesEvents",
-    "gs.chef.di": "https://github.com/chefgamestudio/ChefDI.git?path=Assets/ChefDI#v1.0.3",
-    "gs.chef.synthesis": "https://github.com/chefgamestudio/ChefDI.git?path=Assets/Synthesis#v1.0.3",
-    "gs.chef.messagepipe.chefdi": "https://github.com/chefgamestudio/ChefDI.git?path=Assets/MessagePipe#v1.0.3",
     "com.cysharp.messagepipe": "1.8.1",
     "com.cysharp.unitask": "2.5.10",
     "com.unity.ai.navigation": "2.0.4",
@@ -13,12 +10,16 @@
     "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.11.2",
+    "com.unity.logging": "1.3.4",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.physics": "1.3.5",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
+    "gs.chef.di": "https://github.com/chefgamestudio/ChefDI.git?path=Assets/ChefDI#v1.0.3",
+    "gs.chef.messagepipe.chefdi": "https://github.com/chefgamestudio/ChefDI.git?path=Assets/MessagePipe#v1.0.3",
+    "gs.chef.synthesis": "https://github.com/chefgamestudio/ChefDI.git?path=Assets/Synthesis#v1.0.3",
     "jillejr.newtonsoft.json-for-unity": "13.0.102",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
